[gd_scene load_steps=3 format=3 uid="uid://dm777847bygo4"]

[ext_resource type="Script" uid="uid://d1jfth5le5hhv" path="res://game_info.gd" id="1_b7gyi"]
[ext_resource type="Script" uid="uid://sysws77d6l7l" path="res://addons/stopwatch/Stopwatch.gd" id="2_xpaik"]

[node name="GameInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7gyi")

[node name="TimeElapsedContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 16.0
offset_top = 16.0
offset_right = 107.0
offset_bottom = 50.0
vertical = true

[node name="Label" type="Label" parent="TimeElapsedContainer"]
layout_mode = 2
text = "Time elapsed"
vertical_alignment = 1

[node name="TimeElapsedUI" type="Label" parent="TimeElapsedContainer"]
layout_mode = 2
text = "00:00:00"
vertical_alignment = 1

[node name="ScoreContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 66.0
grow_horizontal = 0
vertical = true

[node name="Label3" type="Label" parent="ScoreContainer"]
layout_mode = 2
text = "Score"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreUI" type="Label" parent="ScoreContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Stopwatch" type="Node" parent="."]
script = ExtResource("2_xpaik")
pause_on_reset = true
metadata/_custom_type_script = "uid://sysws77d6l7l"

[node name="AnnouncerLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UIWaitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="UIWaitTimer" to="." method="_on_ui_wait_timer_timeout"]
